welcome.lessons.welcome.bat.bool1.Max1020.scala.code
def max1020(a:Int, b:Int):Int = {
  if ((Math.max(a,b)<=20 && Math.max(a,b)>=10) || ((Math.max(a,b)>20 || Math.max(a,b)<10) && Math.min(a,b)<=20 && Math.min(a,b)>=10)){
    return true
  }else{
    return false
  }
}